tests/invalid/listen_manual_in_asset.prsm
// E083: listen manual is only valid inside a component
asset Config : ScriptableObject {
  func setup(button: Button) {
    val token = listen button.onClick manual {
      fire()
    }
  }
}
